[gd_scene load_steps=107 format=2]

[ext_resource path="res://img/characters/chico/stop/stop0009.png" type="Texture" id=1]
[ext_resource path="res://scn/instances/chico.gd" type="Script" id=2]
[ext_resource path="res://img/characters/chico/stop/stop0002.png" type="Texture" id=3]
[ext_resource path="res://img/characters/chico/stop/stop0003.png" type="Texture" id=4]
[ext_resource path="res://img/characters/chico/stop/stop0005.png" type="Texture" id=5]
[ext_resource path="res://img/characters/chico/stop/stop0001.png" type="Texture" id=6]
[ext_resource path="res://img/characters/chico/stop/stop0006.png" type="Texture" id=7]
[ext_resource path="res://img/characters/chico/stop/stop0007.png" type="Texture" id=8]
[ext_resource path="res://img/characters/chico/stop/stop0004.png" type="Texture" id=9]
[ext_resource path="res://img/characters/chico/stop/stop0008.png" type="Texture" id=10]
[ext_resource path="res://img/characters/chico/run/run0022.png" type="Texture" id=11]
[ext_resource path="res://img/characters/chico/run/run0025.png" type="Texture" id=12]
[ext_resource path="res://img/characters/chico/run/run0008.png" type="Texture" id=13]
[ext_resource path="res://img/characters/chico/run/run0028.png" type="Texture" id=14]
[ext_resource path="res://img/characters/chico/run/run0024.png" type="Texture" id=15]
[ext_resource path="res://img/characters/chico/run/run0020.png" type="Texture" id=16]
[ext_resource path="res://img/characters/chico/run/run0027.png" type="Texture" id=17]
[ext_resource path="res://img/characters/chico/run/run0005.png" type="Texture" id=18]
[ext_resource path="res://img/characters/chico/run/run0007.png" type="Texture" id=19]
[ext_resource path="res://img/characters/chico/run/run0021.png" type="Texture" id=20]
[ext_resource path="res://img/characters/chico/run/run0026.png" type="Texture" id=21]
[ext_resource path="res://img/characters/chico/run/run0006.png" type="Texture" id=22]
[ext_resource path="res://img/characters/chico/run/run0009.png" type="Texture" id=23]
[ext_resource path="res://img/characters/chico/run/run0004.png" type="Texture" id=24]
[ext_resource path="res://img/characters/chico/run/run0023.png" type="Texture" id=25]
[ext_resource path="res://img/characters/chico/jump/jump0004.png" type="Texture" id=26]
[ext_resource path="res://img/characters/chico/run/run0019.png" type="Texture" id=27]
[ext_resource path="res://img/characters/chico/stop/stop0017.png" type="Texture" id=28]
[ext_resource path="res://img/characters/chico/stop/stop0011.png" type="Texture" id=29]
[ext_resource path="res://img/characters/chico/stop/stop0013.png" type="Texture" id=30]
[ext_resource path="res://img/characters/chico/stop/stop0014.png" type="Texture" id=31]
[ext_resource path="res://img/characters/chico/stop/stop0010.png" type="Texture" id=32]
[ext_resource path="res://img/characters/chico/stop/stop0015.png" type="Texture" id=33]
[ext_resource path="res://img/characters/chico/stop/stop0012.png" type="Texture" id=34]
[ext_resource path="res://img/characters/chico/stop/stop0016.png" type="Texture" id=35]
[ext_resource path="res://img/characters/chico/stop/stop0020.png" type="Texture" id=36]
[ext_resource path="res://img/characters/chico/stop/stop0025.png" type="Texture" id=37]
[ext_resource path="res://img/characters/chico/stop/stop0018.png" type="Texture" id=38]
[ext_resource path="res://img/characters/chico/run/run0016.png" type="Texture" id=39]
[ext_resource path="res://img/characters/chico/stop/stop0019.png" type="Texture" id=40]
[ext_resource path="res://img/characters/chico/stop/stop0021.png" type="Texture" id=41]
[ext_resource path="res://img/characters/chico/stop/stop0023.png" type="Texture" id=42]
[ext_resource path="res://img/characters/chico/stop/stop0022.png" type="Texture" id=43]
[ext_resource path="res://img/characters/chico/stop/stop0024.png" type="Texture" id=44]
[ext_resource path="res://img/characters/chico/run/run0014.png" type="Texture" id=45]
[ext_resource path="res://img/characters/chico/run/run0015.png" type="Texture" id=46]
[ext_resource path="res://img/characters/chico/run/run0017.png" type="Texture" id=47]
[ext_resource path="res://img/characters/chico/run/run0018.png" type="Texture" id=48]
[ext_resource path="res://img/characters/chico/run/run0011.png" type="Texture" id=49]
[ext_resource path="res://img/characters/chico/run/run0012.png" type="Texture" id=50]
[ext_resource path="res://img/characters/chico/run/run0013.png" type="Texture" id=51]
[ext_resource path="res://img/characters/chico/run/run0010.png" type="Texture" id=52]
[ext_resource path="res://img/characters/chico/attack/attack0021.png" type="Texture" id=53]
[ext_resource path="res://img/characters/chico/attack/attack0019.png" type="Texture" id=54]
[ext_resource path="res://img/characters/chico/attack/attack0023.png" type="Texture" id=55]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0012.png" type="Texture" id=56]
[ext_resource path="res://img/characters/chico/attack/attack0016.png" type="Texture" id=57]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0010.png" type="Texture" id=58]
[ext_resource path="res://img/characters/chico/jump/jump0022.png" type="Texture" id=59]
[ext_resource path="res://img/characters/chico/jump/jump0027.png" type="Texture" id=60]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0018.png" type="Texture" id=61]
[ext_resource path="res://img/characters/chico/jump/jump0025.png" type="Texture" id=62]
[ext_resource path="res://sound/effect/SF-doigt-coup-vent2.mp3" type="AudioStream" id=63]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0009.png" type="Texture" id=64]
[ext_resource path="res://img/characters/chico/attack/attack0017.png" type="Texture" id=65]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0011.png" type="Texture" id=66]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0014.png" type="Texture" id=67]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0007.png" type="Texture" id=68]
[ext_resource path="res://img/characters/chico/attack/attack0015.png" type="Texture" id=69]
[ext_resource path="res://img/characters/chico/attack/attack0018.png" type="Texture" id=70]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0016.png" type="Texture" id=71]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0008.png" type="Texture" id=72]
[ext_resource path="res://img/characters/chico/attack/attack0024.png" type="Texture" id=73]
[ext_resource path="res://img/characters/chico/attack/attack0025.png" type="Texture" id=74]
[ext_resource path="res://img/characters/chico/attack/attack0020.png" type="Texture" id=75]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0013.png" type="Texture" id=76]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0017.png" type="Texture" id=77]
[ext_resource path="res://img/characters/chico/jump/jump0026.png" type="Texture" id=78]
[ext_resource path="res://img/characters/chico/attack/attack0022.png" type="Texture" id=79]
[ext_resource path="res://img/characters/chico/jump/jump0024.png" type="Texture" id=80]
[ext_resource path="res://img/characters/chico/attack/attack0026.png" type="Texture" id=81]
[ext_resource path="res://img/characters/chico/jump/jump0023.png" type="Texture" id=82]
[ext_resource path="res://img/characters/chico/jump_attack/jump_attack0015.png" type="Texture" id=83]
[ext_resource path="res://img/characters/chico/jump/jump0011.png" type="Texture" id=84]
[ext_resource path="res://img/characters/chico/jump/jump0007.png" type="Texture" id=85]
[ext_resource path="res://img/characters/chico/jump/jump0013.png" type="Texture" id=86]
[ext_resource path="res://img/characters/chico/jump/jump0016.png" type="Texture" id=87]
[ext_resource path="res://img/characters/chico/jump/jump0017.png" type="Texture" id=88]
[ext_resource path="res://img/characters/chico/jump/jump0018.png" type="Texture" id=89]
[ext_resource path="res://img/characters/chico/jump/jump0019.png" type="Texture" id=90]
[ext_resource path="res://img/characters/chico/jump/jump0020.png" type="Texture" id=91]
[ext_resource path="res://img/characters/chico/jump/jump0008.png" type="Texture" id=92]
[ext_resource path="res://img/characters/chico/jump/jump0021.png" type="Texture" id=93]
[ext_resource path="res://img/characters/chico/jump/jump0009.png" type="Texture" id=94]
[ext_resource path="res://img/characters/chico/jump/jump0014.png" type="Texture" id=95]
[ext_resource path="res://img/characters/chico/jump/jump0006.png" type="Texture" id=96]
[ext_resource path="res://img/characters/chico/jump/jump0015.png" type="Texture" id=97]
[ext_resource path="res://img/characters/chico/jump/jump0005.png" type="Texture" id=98]
[ext_resource path="res://img/characters/chico/jump/jump0012.png" type="Texture" id=99]
[ext_resource path="res://img/characters/chico/jump/jump0010.png" type="Texture" id=100]
[ext_resource path="res://sound/effect/SF-doigt-coup-vent1.mp3" type="AudioStream" id=101]
[ext_resource path="res://sound/effect/SF-saut_beton1.mp3" type="AudioStream" id=102]
[ext_resource path="res://sound/effect/SF-saut_ciment1.mp3" type="AudioStream" id=103]
[ext_resource path="res://sound/effect/SF-course_beton-1.mp3" type="AudioStream" id=104]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 28 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 37 ) ],
"loop": true,
"name": "stop",
"speed": 30.0
}, {
"frames": [ ExtResource( 100 ), ExtResource( 84 ), ExtResource( 99 ), ExtResource( 86 ), ExtResource( 95 ), ExtResource( 97 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 93 ), ExtResource( 59 ), ExtResource( 82 ), ExtResource( 80 ), ExtResource( 62 ), ExtResource( 78 ), ExtResource( 60 ) ],
"loop": true,
"name": "jump_air",
"speed": 30.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 98 ), ExtResource( 96 ), ExtResource( 85 ), ExtResource( 92 ), ExtResource( 94 ) ],
"loop": false,
"name": "jump_in",
"speed": 30.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 23 ) ],
"loop": false,
"name": "run_start",
"speed": 30.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 72 ), ExtResource( 64 ), ExtResource( 58 ), ExtResource( 66 ), ExtResource( 56 ), ExtResource( 76 ), ExtResource( 67 ), ExtResource( 83 ), ExtResource( 71 ), ExtResource( 77 ), ExtResource( 61 ) ],
"loop": false,
"name": "jump_attack",
"speed": 30.0
}, {
"frames": [ ExtResource( 69 ), ExtResource( 57 ), ExtResource( 65 ), ExtResource( 70 ), ExtResource( 54 ), ExtResource( 75 ), ExtResource( 53 ), ExtResource( 79 ), ExtResource( 55 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 81 ) ],
"loop": false,
"name": "attack",
"speed": 30.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 39 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 27 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 25 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 14 ) ],
"loop": true,
"name": "run",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.0
height = 120.0

[node name="Chico" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "stop"
frame = 24
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CamTarget" type="Position2D" parent="."]
position = Vector2( -500, 0 )

[node name="SoundEffect" type="Node2D" parent="."]

[node name="Slash1" type="AudioStreamPlayer2D" parent="SoundEffect"]
stream = ExtResource( 101 )

[node name="Slash2" type="AudioStreamPlayer2D" parent="SoundEffect"]
stream = ExtResource( 63 )

[node name="Jumpin1" type="AudioStreamPlayer2D" parent="SoundEffect"]
stream = ExtResource( 102 )
volume_db = -5.0

[node name="Jumpin2" type="AudioStreamPlayer2D" parent="SoundEffect"]
stream = ExtResource( 103 )
volume_db = -5.0

[node name="Run" type="AudioStreamPlayer2D" parent="SoundEffect"]
stream = ExtResource( 104 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
